--- a/back/package.json
+++ b/back/package.json
@@ -4,12 +4,13 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon ./src"
+		"start": "nodemon ./src/server.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"method-override": "^3.0.0",
 		"morgan": "^1.9.1",
